fix http to https references
- updated `index.html`
- updated `gopro.html`
- updated `404.html`
- updated `about/index.html`

--- a/about/index.html
+++ b/about/index.html
@@ -3,16 +3,16 @@
 <head>
   <title>FELIPE RAMOS</title>
   <meta charset="utf-8">
-  <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
+  <!--[if IE]><meta httpss-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
   <meta name="description" content="Product Designer">
   <meta property="og:title" content="Product Designer"/>
 	<meta property="og:site_name" content="FELIPE RAMOS"/>
   <meta property="og:type" content="website"/>
-  <meta property="og:url" content="http://feliperamos.me/"/>
+  <meta property="og:url" content="httpss://feliperamos.me/"/>
   <meta property="og:description" content="Felipe Ramos is a Product Designer from Brazil."/>
   <meta property="og:locale" content="en_US">
-  <meta property="og:image" content="http://feliperamos.me/img/main_dark-theme.jpg">
+  <meta property="og:image" content="httpss://feliperamos.me/img/main_dark-theme.jpg">
   <meta property="og:image:alt" content="Felipe Ramos, Product Designer in New York city.">
   <meta property="og:image:type" content="image/jpeg">
   <meta property="og:image:width" content="1920">
@@ -21,10 +21,10 @@
   <meta name="twitter:site" content="@fe410"/>
   <meta name="twitter:title" content="FELIPE RAMOS"/>
   <meta name="twitter:description" content="Product Designer"/>
-  <link rel="canonical" href="http://feliperamos.me"/>
+  <link rel="canonical" href="httpss://feliperamos.me"/>
 
   <!-- Google Fonts -->
-  <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700%7CPT+Serif:400,700,400italic' rel='stylesheet'>
+  <link href='httpss://fonts.googleapis.com/css?family=Montserrat:400,700%7CPT+Serif:400,700,400italic' rel='stylesheet'>
 
   <!-- CSS -->
   <link rel="stylesheet" href="../css/bootstrap.min.css" />
@@ -114,13 +114,13 @@
             <div class="menu-socials hidden-sm hidden-xs">
               <ul>
                 <li>
-                  <a href="https://www.facebook.com/feliperamos.me"><i class="fa fa-facebook"></i></a>
+                  <a href="httpsss://www.facebook.com/feliperamos.me"><i class="fa fa-facebook"></i></a>
                 </li>
                 <li>
-                  <a href="https://www.linkedin.com/in/feraio/"><i class="fa fa-linkedin"></i></a>
+                  <a href="httpsss://www.linkedin.com/in/feraio/"><i class="fa fa-linkedin"></i></a>
                 </li>
                 <li>
-                  <a href="https://twitter.com/fe410"><i class="fa fa-twitter"></i></a>
+                  <a href="httpsss://twitter.com/fe410"><i class="fa fa-twitter"></i></a>
                 </li>
               </ul>
             </div>
@@ -196,7 +196,7 @@
               <p>Over the last 5 years I've been in touch with User Experience concepts and processes, working with a user centered and data-driven design approaches for KPIs and OKRs, from all steps of a product lifetime, since its concepts, hypothesis, prototyping, interaction design, user testing and validation methods.</p>
               <p>I have experience providing data for the stakeholders, being the bridge between product/business and development teams.</p>
               <br>
-              <p><strong>You can <a href="../download/Felipe Ramos-Resume_ENG.pdf" target="_blank">download</a> my resume or check my <a href="https://www.linkedin.com/in/feraio/" target="_blank">LinkedIn</a> profile for detailed education and work experience information.</strong>
+              <p><strong>You can <a href="../download/Felipe Ramos-Resume_ENG.pdf" target="_blank">download</a> my resume or check my <a href="httpsss://www.linkedin.com/in/feraio/" target="_blank">LinkedIn</a> profile for detailed education and work experience information.</strong>
             </div>
           </div>
 
@@ -487,7 +487,7 @@
   <!-- jQuery Scripts -->
   <script type="text/javascript" src="../js/jquery.min.js"></script>
   <script type="text/javascript" src="../js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="http://maps.google.com/maps/api/js"></script>
+  <script type="text/javascript" src="httpss://maps.google.com/maps/api/js"></script>
   <script type="text/javascript" src="../js/gmap3.js"></script>
   <script type="text/javascript" src="../js/plugins.js"></script>
   <script type="text/javascript" src="../revolution/js/jquery.themepunch.tools.min.js"></script>
