--- a/gopro.html
+++ b/gopro.html
@@ -3,16 +3,16 @@
 <head>
   <title>GoPro | FELIPE RAMOS</title>
   <meta charset="utf-8">
-  <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
+  <!--[if IE]><meta https-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
   <meta name="description" content="GoPro iOS Redesign by Felipe Ramos">
   <meta property="og:title" content="GoPro iOS Redesign"/>
   <meta property="og:site_name" content="FELIPE RAMOS"/>
   <meta property="og:type" content="website"/>
-  <meta property="og:url" content="http://feliperamos.me/gopro.html"/>
+  <meta property="og:url" content="https://feliperamos.me/gopro.html"/>
   <meta property="og:description" content="GoPro iOS Redesign by Felipe Ramos"/>
   <meta property="og:locale" content="en_US">
-  <meta property="og:image" content="http://feliperamos.me/sketch/gopro/gopro-main.jpg">
+  <meta property="og:image" content="https://feliperamos.me/sketch/gopro/gopro-main.jpg">
   <meta property="og:image:alt" content="User holding redesigned GoPro app by Felipe Ramos">
   <meta property="og:image:type" content="image/jpeg">
   <meta property="og:image:width" content="1440">
@@ -21,10 +21,10 @@
   <meta name="twitter:site" content="@fe410"/>
   <meta name="twitter:title" content="FELIPE RAMOS"/>
   <meta name="twitter:description" content="GoPro iOS Redesign by Felipe Ramos"/>
-  <link rel="canonical" href="http://feliperamos.me"/>
+  <link rel="canonical" href="https://feliperamos.me"/>
 
   <!-- Google Fonts -->
-  <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700%7CPT+Serif:400,700,400italic' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700%7CPT+Serif:400,700,400italic' rel='stylesheet'>
 
   <!-- CSS -->
   <link rel="stylesheet" href="css/bootstrap.min.css" />
@@ -114,13 +114,13 @@
             <div class="menu-socials hidden-sm hidden-xs">
               <ul>
                 <li>
-                  <a href="https://www.facebook.com/feliperamos.me"><i class="fa fa-facebook"></i></a>
+                  <a href="httpss://www.facebook.com/feliperamos.me"><i class="fa fa-facebook"></i></a>
                 </li>
                 <li>
-                  <a href="https://www.linkedin.com/in/feraio/"><i class="fa fa-linkedin"></i></a>
+                  <a href="httpss://www.linkedin.com/in/feraio/"><i class="fa fa-linkedin"></i></a>
                 </li>
                 <li>
-                  <a href="https://twitter.com/fe410"><i class="fa fa-twitter"></i></a>
+                  <a href="httpss://twitter.com/fe410"><i class="fa fa-twitter"></i></a>
                 </li>
               </ul>
             </div>
@@ -255,7 +255,7 @@
                       <h5>APP PREVIEW</h5>
                       <p>Here is a quick preview navigating through the app. We can see in action the use of main features and the settings section. This kind of prototype was used with user to get feedback.</p>
 
-                      <p class="text-center"><iframe src="https://player.vimeo.com/video/234255014" width="320" height="569" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                      <p class="text-center"><iframe src="httpss://player.vimeo.com/video/234255014" width="320" height="569" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                       <p>
 
 
