--- a/404.html
+++ b/404.html
@@ -3,16 +3,16 @@
 <head>
   <title>Page not found | FELIPE RAMOS</title>
   <meta charset="utf-8">
-  <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
+  <!--[if IE]><meta https-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
   <meta name="description" content="Page not found | FELIPE RAMOS">
   <meta property="og:title" content="Page not found | FELIPE RAMOS"/>
   <meta property="og:site_name" content="FELIPE RAMOS"/>
   <meta property="og:type" content="website"/>
-  <meta property="og:url" content="http://feliperamos.me/404.html"/>
+  <meta property="og:url" content="https://feliperamos.me/404.html"/>
   <meta property="og:description" content="GoPro iOS Redesign by Felipe Ramos"/>
   <meta property="og:locale" content="en_US">
-  <meta property="og:image" content="http://feliperamos.me/img/main_dark-theme.jpg">
+  <meta property="og:image" content="https://feliperamos.me/img/main_dark-theme.jpg">
   <meta property="og:image:alt" content="Felipe Ramos, Product Designer in New York City.">
   <meta property="og:image:type" content="image/jpeg">
   <meta property="og:image:width" content="1920">
@@ -21,10 +21,10 @@
   <meta name="twitter:site" content="@fe410"/>
   <meta name="twitter:title" content="FELIPE RAMOS"/>
   <meta name="twitter:description" content="Page not found | FELIPE RAMOS"/>
-  <link rel="canonical" href="http://feliperamos.me"/>
+  <link rel="canonical" href="https://feliperamos.me"/>
 
   <!-- Google Fonts -->
-  <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700%7CPT+Serif:400,700,400italic' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700%7CPT+Serif:400,700,400italic' rel='stylesheet'>
 
   <!-- CSS -->
   <link rel="stylesheet" href="css/bootstrap.min.css" />
@@ -114,13 +114,13 @@
             <div class="menu-socials hidden-sm hidden-xs">
               <ul>
                 <li>
-                  <a href="https://www.facebook.com/feliperamos.me"><i class="fa fa-facebook"></i></a>
+                  <a href="httpss://www.facebook.com/feliperamos.me"><i class="fa fa-facebook"></i></a>
                 </li>
                 <li>
-                  <a href="https://www.linkedin.com/in/feraio/"><i class="fa fa-linkedin"></i></a>
+                  <a href="httpss://www.linkedin.com/in/feraio/"><i class="fa fa-linkedin"></i></a>
                 </li>
                 <li>
-                  <a href="https://twitter.com/fe410"><i class="fa fa-twitter"></i></a>
+                  <a href="httpss://twitter.com/fe410"><i class="fa fa-twitter"></i></a>
                 </li>
               </ul>
             </div>
@@ -155,7 +155,7 @@
   <!-- jQuery Scripts -->
   <script type="text/javascript" src="js/jquery.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="http://maps.google.com/maps/api/js"></script>
+  <script type="text/javascript" src="https://maps.google.com/maps/api/js"></script>
   <script type="text/javascript" src="js/gmap3.js"></script>
   <script type="text/javascript" src="js/plugins.js"></script>
   <script type="text/javascript" src="revolution/js/jquery.themepunch.tools.min.js"></script>
