fix gopro video
- temporary fix with streamable iframe for gopro.html page instead of previous vimeo content
- uploaded .mp4 file for future improvement with native html player

--- a/gopro.html
+++ b/gopro.html
@@ -255,7 +255,7 @@
                       <h5>APP PREVIEW</h5>
                       <p>Here is a quick preview navigating through the app. We can see in action the use of main features and the settings section. This kind of prototype was used with user to get feedback.</p>
 
-                      <p class="text-center"><iframe src="httpss://player.vimeo.com/video/234255014" width="320" height="569" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                      <p class="text-center"><iframe src="https://streamable.com/s/ww2v4/exvehl" width="375" height="668" frameborder="0" allowfullscreen></iframe>
                       <p>
 
 
