--- a/index.html
+++ b/index.html
@@ -114,13 +114,13 @@
             <div class="menu-socials hidden-sm hidden-xs">
               <ul>
                 <li>
-                  <a href="httpss://www.facebook.com/feliperamos.me"><i class="fa fa-facebook"></i></a>
+                  <a href="https://www.facebook.com/feliperamos.me"><i class="fa fa-facebook"></i></a>
                 </li>
                 <li>
-                  <a href="httpss://www.linkedin.com/in/feraio/"><i class="fa fa-linkedin"></i></a>
+                  <a href="https://www.linkedin.com/in/feraio/"><i class="fa fa-linkedin"></i></a>
                 </li>
                 <li>
-                  <a href="httpss://twitter.com/fe410"><i class="fa fa-twitter"></i></a>
+                  <a href="https://twitter.com/fe410"><i class="fa fa-twitter"></i></a>
                 </li>
               </ul>
             </div>
