--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                   <a href="https://www.facebook.com/feliperamos.me"><i class="fa fa-facebook"></i></a>
                 </li>
                 <li>
-                  <a href="https://www.linkedin.com/in/feraio/"><i class="fa fa-linkedin"></i></a>
+                  <a href="https://www.linkedin.com/in/feliperamosme/"><i class="fa fa-linkedin"></i></a>
                 </li>
                 <li>
                   <a href="https://twitter.com/fe410"><i class="fa fa-twitter"></i></a>
